--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
         
       </div>
       <div class="image-container">
-        <img src="/23_792970021.png" alt="" />
+        <img src="23_792970021.png" alt="" />
       </div>
       <div class="image-container">
-        <img src="/IMG-20240916-WA0008.jpg" alt="/IMG-20240916-WA0008.jpg">
+        <img src="IMG-20240916-WA0008.jpg" alt="/IMG-20240916-WA0008.jpg">
       </div>
       <div class="image-container"></div>
     </div>
