--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <input class="check-btn" id="btn" type="checkbox" name="accordion" checked>
       <header class="accordion-header">
         <label for="btn" class="accordion-btn">
-          <span>Accordion Title</span>
+          <span>About Me</span>
           <p>
             <i class="fa-solid fa-chevron-down"></i>
           </p>
@@ -60,7 +60,7 @@
       </header>
       <div class="accordion-body">
         <p class="accordion-content">
-          Lorem ipsum is a placeholder text used in publishing and graphic design to show the visual style of a document, typeface, or webpage. It's not meant to be read as meaningful sentences, but rather to serve as a sample.
+          Myself ANUP MANDAL , I am currently pursuing B.Tech(Metallurgy) from BIT Sindri, Dhanbad, Jharkhand.
         </p>
       </div>
     </div>
@@ -69,7 +69,7 @@
       <input class="check-btn" type="checkbox" name="accordion" id="btn1">
       <header class="accordion-header">
         <label for="btn1" class="accordion-btn">
-          <span>Accordion Title</span>
+          <span>Education Qualification</span>
           <p>
             <i class="fa-solid fa-chevron-down"></i>
           </p>
@@ -77,7 +77,8 @@
       </header>
       <div class="accordion-body">
         <p class="accordion-content">
-          This is an accordion content. It is inside accordion body and all the content of the accordion will go here.
+          I have done my <b>Matriculation</b> from VIKAS HIGH SCHOOL PALOJORI
+          and <b>Intermediate</b> from JBC(+2) HIGH SCHOOL JAMTARA.
         </p>
       </div>
     </div>
@@ -86,7 +87,7 @@
       <input class="check-btn" type="checkbox" name="accordion" id="btn2">
       <header class="accordion-header">
         <label for="btn2" class="accordion-btn">
-          <span>Accordion Title</span>
+          <span>Skills</span>
           <p>
             <i class="fa-solid fa-chevron-down"></i>
           </p>
@@ -94,7 +95,10 @@
       </header>
       <div class="accordion-body">
         <p class="accordion-content">
-          This is an accordion content. It is inside accordion body and all the content of the accordion will go here.
+          I have basic knowledge of <br>
+          <b>Web Development</b><br>
+          <b>C++</b><br>
+          <b>Python</b>
         </p>
       </div>
     </div>
